--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^16.11.0",
     "react-modal": "^3.11.1",
     "react-pose": "^4.0.10",
+    "react-transition-group": "^4.4.1",
     "react-typography": "^0.16.19",
     "styled-components": "^4.4.1",
     "typography": "^0.16.19",
